Finished the hero side of the site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="site-header">
 
-    <div class="container site-header__container">
+    <div class="site-header__container container">
 
       <a class="site-header__logo" href="index.html">
         <img  class="site-header__logo-img" src="img/myteam-logo.svg" alt="site logo" width="160" height="40" srcset="img/myteam-logo.svg 1x, img/myteam-logo@2x.svg 2x">
@@ -32,6 +32,29 @@
     </div>
 
   </header>
+
+  <main class="main-content">
+
+    <section class="main-content__hero hero">
+
+      <div class="hero__hero-box container">
+
+        <div class="hero__heading-box">
+          <h1 class="hero__heading">
+            Find the <br> best <span class="hero__heading-pink">talent</span>
+          </h1>
+        </div>
+        <div class="hero__text-box">
+          <p class="hero__text">
+            Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.
+          </p>
+        </div>
+
+      </div>
+
+    </section>
+
+  </main>
 
 </body>
 </html>
