--- a/index.html
+++ b/index.html
@@ -54,6 +54,48 @@
 
     </section>
 
+    <section class="main-content__features features">
+
+      <div class="features__container container">
+
+        <div class="features__heading-box">
+          <h2 class="features__heading">Build & manage distributed teams like no one else.</h2>
+        </div>
+        <div class="features__features-box">
+          <ul class="features__list features-list">
+
+            <li class="features-list__item features-list__item--first">
+              <div class="features-list__box">
+                <h3 class="features-list__heading">Experienced Individuals</h3>
+                <p class="features-list__text">
+                  Our network is made up of highly experienced professionals who are passionate about what they do.
+                </p>
+              </div>
+            </li>
+            <li class="features-list__item features-list__item--second">
+              <div class="features-list__box">
+                <h3 class="features-list__heading">Easy to Implement</h3>
+                <p class="features-list__text">
+                  Our processes have been refined over years of implementation meaning our teams always deliver.
+                </p>
+              </div>
+            </li>
+            <li class="features-list__item features-list__item--third">
+              <div class="features-list__box">
+                <h3 class="features-list__heading">Enhanced Productivity</h3>
+                <p class="features-list__text">
+                  Our customized platform with in-built analytics helps you manage your distributed teams.
+                </p>
+              </div>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+
+    </section>
+
   </main>
 
 </body>
