Finished the stories side of the main page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <main class="main-content">
 
-    <section class="main-content__hero hero">
+    <section class="hero">
 
       <div class="hero__hero-box container">
 
@@ -54,7 +54,7 @@
 
     </section>
 
-    <section class="main-content__features features">
+    <section class="features">
 
       <div class="features__container container">
 
@@ -91,6 +91,46 @@
 
           </ul>
         </div>
+
+      </div>
+
+    </section>
+
+    <section class="stories">
+
+      <div class="stories__container container">
+
+        <h2 class="stories__heading">
+          Delivering real results for top companies. Some of our <span class="stories__heading-blue">success stories.</span>
+        </h2>
+
+        <ul class="stories__list stories-list">
+
+          <li class="stories-list__item">
+            <div class="stories-list__story-box stories-list__story-box--kady">
+              <p class="stories-list__heading">Kady Baker</p>
+              <p class="stories-list__heading-about">Product Manager at Bookmark</p>
+            </div>
+            <blockquote class="stories-list__blockquote">“The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</blockquote>
+          </li>
+
+          <li class="stories-list__item">
+            <div class="stories-list__story-box stories-list__story-box--aiysha">
+              <p class="stories-list__heading">Aiysha Reese</p>
+              <p class="stories-list__heading-about">Founder of Manage</p>
+            </div>
+            <blockquote class="stories-list__blockquote">“We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</blockquote>
+          </li>
+
+          <li class="stories-list__item">
+            <div class="stories-list__story-box stories-list__story-box--arthur">
+              <p class="stories-list__heading">Arthur Clarke</p>
+              <p class="stories-list__heading-about">Co-founder of MyPhysio</p>
+            </div>
+            <blockquote class="stories-list__blockquote">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</blockquote>
+          </li>
+
+        </ul>
 
       </div>
 
