Finished the responsives till the stories side

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <nav class="site-header__sitenav">
         <ul class="sitenav__list">
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">home</a>
+            <a class="sitenav__link" href="index.html">home</a>
           </li>
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">about</a>
+            <a class="sitenav__link" href="about.html">about</a>
           </li>
         </ul>
 
@@ -45,6 +45,7 @@
           </h1>
         </div>
         <div class="hero__text-box">
+
           <p class="hero__text">
             Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.
           </p>
@@ -100,9 +101,11 @@
 
       <div class="stories__container container">
 
-        <h2 class="stories__heading">
-          Delivering real results for top companies. Some of our <span class="stories__heading-blue">success stories.</span>
-        </h2>
+        <div class="stories__heading-box">
+          <h2 class="stories__heading">
+            Delivering real results for top companies. Some of our <span class="stories__heading-blue">success stories.</span>
+          </h2>
+        </div>
 
         <ul class="stories__list stories-list">
 
