Finished the starter side of the home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
 
-        <a class="site-header__btn button button--light" href="#">Contact us</a>
+        <a class="site-header__btn button button--light" href="contact-us.html">contact us</a>
       </nav>
 
     </div>
@@ -135,6 +135,15 @@
 
         </ul>
 
+      </div>
+
+    </section>
+
+    <section class="starter">
+
+      <div class="starter__container container">
+        <h2 class="starter__heading">Ready to get started?</h2>
+        <a class="button button--dark" href="contact-us.html">contact us</a>
       </div>
 
     </section>
