--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>42-dars. Sass</title>
+  <title>Myteam</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
